@@ -1,5 +1,5 @@
 /*
- * Copyright 2020 the original author or authors.
+ * Copyright 2020-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -47,8 +47,13 @@ class KotlinRouterSpec<K, R : AbstractMappingMessageRouter>(override val delegat
 		this.delegate.suffix(suffix)
 	}
 
+	@Deprecated(message = "Since 6.0", replaceWith = ReplaceWith("channelKeyFallback(false)"))
 	fun noChannelKeyFallback() {
-		this.delegate.noChannelKeyFallback()
+		channelKeyFallback(false)
+	}
+
+	fun channelKeyFallback(channelKeyFallback: Boolean) {
+		this.delegate.channelKeyFallback(channelKeyFallback)
 	}
 
 	fun channelMapping(key: K, channelName: String) {
